@@ -7,7 +7,7 @@ function s = nmr(a)
 
 %  [a, theta] ^= R_a(theta) = expm(-i*a*sigma*theta/2) = expm(-i*H*t) => H = a*sigma/2, t = theta
 
-% Ville Bergholm 2006-2011
+% Ville Bergholm 2006-2015
 
 
 global qit;
@@ -21,6 +21,6 @@ a(rows,i_theta) = -a(rows,i_theta);
 a(rows,i_phi) = a(rows,i_phi)+pi;
 
 s.A = 0;
-s.B = {1i*0.5*qit.sx, 1i*0.5*qit.sy};
+s.B = {-1i*0.5*qit.sx, -1i*0.5*qit.sy};
 s.tau = a(:, i_theta);
 s.control = [cos(a(:, i_phi)), sin(a(:, i_phi))];
