@@ -8,7 +8,7 @@ function nmr_sequences(seqs, titles)
 %  of both off-resonance error f and fractional pulse lenght error g.
 
 %! Cummins et al., "Tackling systematic errors in quantum logic gates with composite rotations", PRA 67, 042308 (2003).
-% Ville Bergholm 2006-2011
+% Ville Bergholm 2006-2015
 
 
 fprintf('\n\n=== NMR control sequences for correcting systematic errors ===\n')
@@ -16,7 +16,8 @@ fprintf('\n\n=== NMR control sequences for correcting systematic errors ===\n')
 global qit;
 
 if nargin < 1
-    seqs = {seq.nmr([pi, 0]), seq.corpse(pi), seq.scrofulous(pi), seq.bb1(pi)};
+    th = pi;
+    seqs = {seq.nmr([th, 0]), seq.corpse(th), seq.scrofulous(th), seq.bb1(th)};
     titles = {'Plain \pi pulse', 'CORPSE', 'SCROFULOUS', 'BB1'};
 else
     if nargin < 2
@@ -24,64 +25,81 @@ else
     end
 end
 
-psi = state('0'); % initial state
-
-f = -1:0.05:1;
-g = -1:0.08:1;
-nf = length(f);
-ng = length(g);
-
-for q=1:length(seqs)
-figure;
-
-s = seqs{q};
-U = seq.seq2prop(s); % target propagator
-
 % The two systematic error types we are interested here can be
 % incorporated into the control sequence.
 
-%==================================================
-s_error = s;
-s_error.A = 0.1 * 1i * 0.5 * qit.sz; % add off-resonance error (constant \sigma_z drift term)
+% off-resonance Hamiltonian (constant \sigma_z drift term) times -1i
+offres_A = -1i * 0.5 * qit.sz;
 
-% apply sequence on state psi, plot the evolution
-[out, t] = seq.propagate(psi, s_error, @bloch_vector);
+psi = state('0'); % initial state
 
-subplot(2,2,1);
-plot_state_trajectory(out);
-title([titles{q} ' evolution, off-resonance error']);
+ns = length(seqs);
+nf = 41;
+ng = 31;
+f = linspace(-1, 1, nf);
+g = linspace(-1, 1, ng);
 
-%==================================================
-s_error = s;
-s_error.tau = s.tau * 1.1; % proportional pulse lenght error
+fid = zeros(ns, ng, nf);
+for q=1:ns
+  figure;
 
-% apply sequence on state psi, plot the evolution
-[out, t] = seq.propagate(psi, s_error, @bloch_vector);
+  s = seqs{q};
+  U = seq.seq2prop(s); % target propagator
 
-subplot(2,2,3);
-plot_state_trajectory(out);
-title([titles{q} ' evolution, pulse length error']);
+  %==================================================
+  s_error = s;
+  s_error.A = 0.1 * offres_A; % add off-resonance error
 
-%==================================================
-s_error = s;
-fid = [];
+  % apply sequence on state psi, plot the evolution
+  [out, t] = seq.propagate(psi, s_error, @bloch_vector);
 
-for k=1:nf
-  s_error.A = f(k) * 1i * 0.5 * qit.sz; % off-resonance error
-  for j=1:ng
-    s_error.tau = s.tau * (1 + g(j)); % pulse length error
-    fid(j, k) = u_fidelity(U, seq.seq2prop(s_error));
+  subplot(2,2,1);
+  plot_state_trajectory(out);
+  title([titles{q} ' evolution, off-resonance error']);
+
+  %==================================================
+  s_error = s;
+  s_error.tau = s.tau * 1.1; % proportional pulse lenght error
+
+  % apply sequence on state psi, plot the evolution
+  [out, t] = seq.propagate(psi, s_error, @bloch_vector);
+
+  subplot(2,2,3);
+  plot_state_trajectory(out);
+  title([titles{q} ' evolution, pulse length error']);
+
+  %==================================================
+  s_error = s;
+
+  for k=1:nf
+      s_error.A = f(k) * offres_A; % off-resonance error
+      for j=1:ng
+          s_error.tau = s.tau * (1 + g(j)); % pulse length error
+          fid(q, j, k) = u_fidelity(U, seq.seq2prop(s_error));
+      end
   end
+
+  subplot(2,2,[2 4]);
+  [X,Y] = meshgrid(f,g);
+  contour(X, Y, 1-squeeze(fid(q,:,:)));
+  xlabel('Off-resonance error');
+  ylabel('Pulse length error');
+  title([titles{q} ' fidelity']);
 end
 
-subplot(2,2,[2 4]);
-[X,Y] = meshgrid(f,g);
-contour(X,Y,1-fid);
-%surf(X,Y,1-fid);
+figure
+plot(f, squeeze(fid(:, (ng+1)/2, :)));
 xlabel('Off-resonance error');
-ylabel('Pulse length error');
-title([titles{q} ' fidelity']);
-end
+ylabel('fidelity')
+legend(titles)
+grid on
+
+figure
+plot(g, squeeze(fid(:, :, (nf+1)/2)));
+xlabel('Pulse length error');
+ylabel('fidelity')
+legend(titles)
+grid on
 end
 
 
@@ -89,4 +107,13 @@ function F = u_fidelity(a,b)
 % fidelity of two unitary rotations, [0,1]
 
   F = 0.5*abs(trace(a'*b));
+end
+
+
+function F = s_fidelity(a,b)
+% fidelity of two state transfers, [0,1]
+% essentially just compare the first columns of the propagators
+
+  temp = a'*b;
+  F = abs(temp(1,1));
 end
