@@ -183,3 +183,5 @@ b bugfix
               + examples/magic_state_distillation
               * utils/unravel_index works on vectors of indices
               * utils/tensorbasis returns the integer locality of each element
+              * seq/*: sign convention changed
+              * examples/nmr_sequences updated
